Fix navbar off screen issue

--- a/style.css
+++ b/style.css
@@ -83,10 +83,9 @@ a:hover {
 }
 .navbar-container {
   position:relative;
-  top:50%;
   left:50%;
   display:inline-block;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, 0%);
 }
 .navbar {
     margin: 0;
